--- a/LevelUp/app/src/main/res/layout/activity_project.xml
+++ b/LevelUp/app/src/main/res/layout/activity_project.xml
@@ -52,6 +52,7 @@
         android:id="@+id/frameproject"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
