--- a/LevelUp/app/src/main/res/layout/cardview_discussions.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_discussions.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp"
+        android:backgroundTint="#FFFFFF"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
