--- a/LevelUp/app/src/main/res/layout/cardview_files.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_files.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="8dp"
+        android:backgroundTint="#FFFFFF"
         android:elevation="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
