--- a/LevelUp/app/src/main/res/layout/cardview_replies.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_replies.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,6 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_marginStart="5dp"
+                android:backgroundTint="#E1E1E1"
                 app:layout_constraintBottom_toBottomOf="@+id/replyppiv"
                 app:layout_constraintStart_toEndOf="@+id/replyppiv"
                 app:layout_constraintTop_toTopOf="@+id/replyppiv">
