--- a/LevelUp/app/src/main/res/layout/fragment_findprojects.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_findprojects.xml
@@ -141,141 +141,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_jobsforu"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" >
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/cardView8"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="32dp"
-                        android:layout_marginEnd="32dp"
-                        android:backgroundTint="@color/lightbluebg"
-                        app:cardCornerRadius="15dp"
-                        app:cardElevation="15dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <ImageView
-                                android:id="@+id/imageView18"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_marginStart="16dp"
-                                android:layout_marginTop="16dp"
-                                android:layout_marginBottom="16dp"
-                                android:src="@drawable/ic_launcher_foreground"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <TextView
-                                android:id="@+id/textView11"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:text="Creative Design"
-                                android:textColor="#FFFFFF"
-                                android:textSize="24sp"
-                                app:layout_constraintStart_toEndOf="@+id/imageView18"
-                                app:layout_constraintTop_toTopOf="@+id/imageView18" />
-
-                            <TextView
-                                android:id="@+id/textView14"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="By Brain ActionT"
-                                android:textColor="#FFFFFF"
-                                app:layout_constraintBottom_toBottomOf="@+id/imageView18"
-                                app:layout_constraintStart_toStartOf="@+id/textView11"
-                                app:layout_constraintTop_toBottomOf="@+id/textView11" />
-
-                            <TextView
-                                android:id="@+id/seedetails1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="16dp"
-                                android:layout_marginBottom="10dp"
-                                android:text="see details"
-                                android:textColor="#FFFFFF"
-                                android:textSize="16sp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="32dp"
-                        android:layout_marginTop="24dp"
-                        android:layout_marginEnd="32dp"
-                        android:backgroundTint="@color/lightbluebg"
-                        app:cardCornerRadius="15dp"
-                        app:cardElevation="15dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/cardView8">
-
-                        <androidx.constraintlayout.widget.ConstraintLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent">
-
-                            <TextView
-                                android:id="@+id/seedetails2"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="16dp"
-                                android:layout_marginBottom="10dp"
-                                android:text="see details"
-                                android:textColor="#FFFFFF"
-                                android:textSize="16sp"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintEnd_toEndOf="parent" />
-
-                            <ImageView
-                                android:id="@+id/imageView19"
-                                android:layout_width="80dp"
-                                android:layout_height="80dp"
-                                android:layout_marginStart="16dp"
-                                android:layout_marginTop="16dp"
-                                android:layout_marginBottom="16dp"
-                                android:src="@drawable/ic_launcher_foreground"
-                                app:layout_constraintBottom_toBottomOf="parent"
-                                app:layout_constraintStart_toStartOf="parent"
-                                app:layout_constraintTop_toTopOf="parent" />
-
-                            <TextView
-                                android:id="@+id/textView12"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="8dp"
-                                android:text="Music Ally"
-                                android:textColor="#FFFFFF"
-                                android:textSize="24sp"
-                                app:layout_constraintStart_toEndOf="@+id/imageView19"
-                                app:layout_constraintTop_toTopOf="@+id/imageView19" />
-
-                            <TextView
-                                android:id="@+id/textView18"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="By james random"
-                                android:textColor="#FFFFFF"
-                                app:layout_constraintBottom_toBottomOf="@+id/imageView19"
-                                app:layout_constraintStart_toStartOf="@+id/textView12"
-                                app:layout_constraintTop_toBottomOf="@+id/textView12" />
-
-                        </androidx.constraintlayout.widget.ConstraintLayout>
-                    </androidx.cardview.widget.CardView>
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_height="match_parent" />
             </com.google.android.material.card.MaterialCardView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
