--- a/LevelUp/app/src/main/res/layout/fragment_myprojects.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_myprojects.xml
@@ -333,7 +333,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/textView11"
+                            android:id="@+id/titleJOBSFORU"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="8dp"
@@ -344,14 +344,14 @@
                             app:layout_constraintTop_toTopOf="@+id/imageView18" />
 
                         <TextView
-                            android:id="@+id/textView14"
+                            android:id="@+id/creatorJOBSFORU"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="By John T"
                             android:textColor="#FFFFFF"
                             app:layout_constraintBottom_toBottomOf="@+id/imageView18"
-                            app:layout_constraintStart_toStartOf="@+id/textView11"
-                            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                            app:layout_constraintStart_toStartOf="@+id/titleJOBSFORU"
+                            app:layout_constraintTop_toBottomOf="@+id/titleJOBSFORU" />
 
                         <androidx.cardview.widget.CardView
                             android:layout_width="wrap_content"
