--- a/LevelUp/app/src/main/res/layout/fragment_profile.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_profile.xml
@@ -33,7 +33,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -126,7 +127,6 @@
                 style="@style/CustomCardViewStyle"
                 android:layout_width="0dp"
                 android:layout_height="700dp"
-                android:layout_marginTop="150dp"
                 android:layout_marginBottom="-72dp"
                 android:backgroundTint="@color/white"
                 app:cardCornerRadius="72dp"
