--- a/LevelUp/app/src/main/res/layout/activity_login.xml
+++ b/LevelUp/app/src/main/res/layout/activity_login.xml
@@ -240,7 +240,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="70dp"
         android:fontFamily="@font/alfa_slab_one"
-        android:text="Log In"
+        android:text="Sign In"
         android:textColor="#000000"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -252,7 +252,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:text="Please enter your id to log in"
+        android:text="Please enter your id to sign in"
         android:textColor="#000000"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
