--- a/LevelUp/app/src/main/res/layout/cardview_teams.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_teams.xml
@@ -12,7 +12,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="5dp"
-        android:backgroundTint="@color/lightbluebg"
+        android:backgroundTint="#03A9F4"
+        app:cardCornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
