--- a/LevelUp/app/src/main/res/layout/cardview_discussions.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_discussions.xml
@@ -178,7 +178,9 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="8dp"
+                android:backgroundTint="#FFFFFF"
                 app:cardCornerRadius="20dp"
+                app:cardElevation="0dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent">
