--- a/LevelUp/app/src/main/res/layout/cardview_tasks.xml
+++ b/LevelUp/app/src/main/res/layout/cardview_tasks.xml
@@ -8,6 +8,10 @@
     <androidx.cardview.widget.CardView
         android:layout_width="380dp"
         android:layout_height="105dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="#03A9F4"
         app:cardCornerRadius="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
