--- a/LevelUp/app/src/main/res/layout/fragment_project_discussion.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_project_discussion.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,12 +13,27 @@
         android:layout_height="match_parent"
         android:backgroundTint="#FFFFFF">
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/adddiscussion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
+            android:clickable="true"
+            android:src="@drawable/ic_baseline_add_24"
+            app:backgroundTint="#03A9F4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/projectdiscussionsrv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:backgroundTint="#FFFFFF"
             tools:layout_editor_absoluteX="-109dp"
-            tools:layout_editor_absoluteY="-130dp" />
+            tools:layout_editor_absoluteY="-130dp" >
+
+        </androidx.recyclerview.widget.RecyclerView>
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
