--- a/LevelUp/app/src/main/res/layout/activity_login.xml
+++ b/LevelUp/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,7 @@
                         android:layout_marginTop="4dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/logoemail" />
+                        app:srcCompat="@drawable/logouser" />
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="0dp"
@@ -83,7 +83,7 @@
                         android:layout_marginStart="8dp"
                         android:layout_marginEnd="16dp"
                         android:background="#FFFFFF"
-                        android:hint="Email"
+                        android:hint="Username"
                         android:textColorHint="@color/lightbluebg"
                         app:boxBackgroundColor="#FFFFFF"
                         app:boxStrokeColor="@color/lightbluebg"
@@ -176,7 +176,7 @@
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/lightbluebg"
                 android:shadowColor="@color/darkbluebg"
-                android:text="Log In"
+                android:text="Sign In"
                 android:textSize="24sp"
                 app:cornerRadius="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
