--- a/LevelUp/app/src/main/res/layout/fragment_myprojects.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_myprojects.xml
@@ -9,7 +9,7 @@
     tools:context=".MyprojectsFragment" >
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/jobsForYou_titleFragment"
         android:layout_width="wrap_content"
         android:layout_height="49dp"
         android:layout_marginStart="32dp"
@@ -27,9 +27,9 @@
         android:layout_height="0dp"
         android:layout_marginEnd="16dp"
         android:src="@drawable/ic_baseline_search_24"
-        app:layout_constraintBottom_toBottomOf="@+id/textView6"
+        app:layout_constraintBottom_toBottomOf="@+id/jobsForYou_titleFragment"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView6" />
+        app:layout_constraintTop_toTopOf="@+id/jobsForYou_titleFragment" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView13"
@@ -41,7 +41,7 @@
         app:cardCornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6">
+        app:layout_constraintTop_toBottomOf="@+id/jobsForYou_titleFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
