--- a/LevelUp/app/src/main/res/layout/activity_reply_discussion.xml
+++ b/LevelUp/app/src/main/res/layout/activity_reply_discussion.xml
@@ -81,13 +81,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/repliesrv"
-        android:layout_width="409dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView17"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
     <androidx.cardview.widget.CardView
