--- a/LevelUp/app/src/main/res/layout/activity_setting.xml
+++ b/LevelUp/app/src/main/res/layout/activity_setting.xml
@@ -135,6 +135,22 @@
         app:cornerRadius="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editprof"
+        app:rippleColor="@color/darkbluebg"
+        app:strokeColor="@color/darkbluebg" />
+
+    <Button
+        android:id="@+id/editprof"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/darkbluebg"
+        android:shadowColor="@color/darkbluebg"
+        android:text="Edit Profession"
+        android:textSize="16sp"
+        app:cornerRadius="10dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/cardView16"
         app:rippleColor="@color/darkbluebg"
         app:strokeColor="@color/darkbluebg" />
