--- a/LevelUp/app/src/main/res/layout/fragment_myprojects.xml
+++ b/LevelUp/app/src/main/res/layout/fragment_myprojects.xml
@@ -8,6 +8,16 @@
     android:background="@color/lightbluebg"
     tools:context=".MyprojectsFragment" >
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/searchtour_myProjects"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
+        android:layout_marginEnd="24dp"
+        app:cardBackgroundColor="#00FFFFFF"
+        app:layout_constraintBottom_toBottomOf="@id/searchView_myProjects"
+        app:layout_constraintEnd_toEndOf="@id/searchView_myProjects"
+        app:layout_constraintTop_toTopOf="@id/searchView_myProjects" />
+
     <SearchView
         android:id="@+id/searchView_myProjects"
         android:layout_width="192dp"
